--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -50,8 +50,8 @@
     </style>
 
     <script>
-
         jQuery(document).ready(function () {
+            console.log("0")
             var steps = $('[data-uploadSteps]').attr('data-uploadSteps');
             var upload_srcSteps = $('[data-uploadSrcSteps]').attr('data-uploadSrcSteps');
             var folderLocation = $('[data-folderUpload]').attr('data-folderUpload');
