--- a/app/Resources/views/ressources/oneDevoirEns.html.twig
+++ b/app/Resources/views/ressources/oneDevoirEns.html.twig
@@ -302,6 +302,24 @@
             $(".tableCopies").tablesorter({
                 sortList: [[1,0]]
             });
+            $('.btnDeleteCopie').click(function(){
+                let tr = $(this).closest('tr');
+                let id = tr.attr('data-copieId');
+                $.ajax({
+                    type: 'POST',
+                    url: "{{ path('deleteCopie_ajax') }}",
+                    async: false,
+                    dataType: "json",
+                    data: {
+                        copieId: id
+                    },
+                    success: function (data) {
+                        tr.remove();
+                    },
+                    error: function (xhr, status, error) {
+                    }
+                });
+            });
         });
     </script>
 
@@ -350,6 +368,9 @@
                             <th>Note</th>
                             <th>Corrigé</th>
                             <th>Nouvel upload</th>
+                            {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                                <th>Action</th>
+                            {% endif %}
                         </tr>
                         </thead>
                         <tbody>
@@ -421,6 +442,9 @@
                                             </div>
                                         </div>
                                     </td>
+                            {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                                <td><a class="btn btnDeleteCopie btn-alert btn-sm" >Supprimer</a></td>
+                            {% endif %}
                                 </tr>
                             {% endif %}
                         {% endfor %}
