--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -521,12 +521,16 @@ label.alertMustBeSet{
     vertical-align: top;
 }
 .courseElem video, .courseElem audio, .blocMedia{
-    max-width: 100%;
+    max-width: 800px;
     margin-top: 15px;
     margin-bottom: 10px;
 }
+@media (min-width: 1000px) {
+    .courseElem video, .courseElem audio, .blocMedia{
+        max-width: 100%;
+    }
+}
 .blocMedia video, .blocMedia audio{
-    max-width: 80%;
     margin-top: 30px;
 }
 .blocMedia{
